# pathlibrs

./: AGENTS.md  CHECKLIST.md  DESIGN.md  Makefile  README.md  pyproject.toml
pathlibrs/: __init__.py  types.py
src/: concrete.rs  fs.rs  iter.rs  lib.rs  pure.rs
tests/: conftest.py  skips.txt  test_basic.py
