[build-system]
requires = ["maturin>=1.8,<2"]
build-backend = "maturin"

[project]
name = "pathlibrs"
version = "0.1.0"
description = "A fast pure-Rust implementation of Python's pathlib"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "juftin", email = "juftin@juftin.com"}]
keywords = ["pathlib", "rust", "pyo3"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Rust"
]

[tool.maturin]
module-name = "pathlibrs"
features = ["pyo3/extension-module"]
bindings = "pyo3"

# uv must NOT try to build the Rust package — that's maturin's job.
# With package=false, uv sync installs only dev deps; maturin develop
# handles the Rust build. This prevents uv from blowing away the
# editable install.
[tool.uv]
package = false

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
python_files = ["test_*.py"]
testpaths = ["tests"]

[dependency-groups]
dev = [
  "maturin>=1.8,<2",
  "pytest>=8",
  "ruff>=0.8"
]
